// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Countdown renders correctly 1`] = `
<Countdown
  className=""
  onTick={[Function]}
  stop={false}
>
  <div
    className="countdown__wrapper "
  >
    <span
      className="countdown__value"
    >
      10
    </span>
    <svg
      className="countdown__animation is-high"
    >
      <circle
        className=""
        cx="17"
        cy="17"
        r="15"
      />
    </svg>
  </div>
</Countdown>
`;

exports[`Countdown renders correctly when stopped 1`] = `
<Countdown
  className=""
  onTick={[Function]}
  stop={true}
>
  <div
    className="countdown__wrapper "
  >
    <span
      className="countdown__value"
    >
      10
    </span>
    <svg
      className="countdown__animation is-high"
    >
      <circle
        className="is-stopped"
        cx="17"
        cy="17"
        r="15"
      />
    </svg>
  </div>
</Countdown>
`;
